# otel-instrumentation-neo4jrs

./: .gitignore  ARCHITECTURE_RECOMMENDATIONS.md  Cargo.toml  README.md  test_ci_locally.sh  test_semconv.rs
.github/workflows/: ci.yml
examples/: metrics_and_tracing.rs  metrics_and_tracing.rs.skip
src/: builder.rs  error.rs  ext.rs  graph.rs  lib.rs  metrics.rs  telemetry.rs  txn.rs
tests/: integration_test.rs
