[package]
name = "otel-instrumentation-neo4jrs"
version = "0.1.3"
authors = ["Richard Peters <shadowrhyder@gmail.com>"]
license = "MIT"
edition = "2021"
description = "OpenTelemetry instrumentation for neo4rs Neo4j driver"
repository = "https://github.com/hermes-capital-io/hermes-platform"
keywords = ["neo4j", "opentelemetry", "tracing", "database", "graph"]

[badges]
maintenance = { status = "experimental" }

[features]
default = []
metrics = ["opentelemetry/metrics"]
full = ["metrics"]

[dependencies]
neo4rs = "0.8.0"
tracing = "0.1.41"
opentelemetry = { version = "0.30.0", features = ["trace"] }
opentelemetry-semantic-conventions = "0.30.0"
futures-util = "0.3.31"
regex = { version = "1.10", optional = true }

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full", "test-util"] }
opentelemetry_sdk = { version = "0.30.0", features = ["metrics"] }
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true