[package]
name = "otel-instrumentation-neo4jrs"
version = "0.2.1"
authors = ["Richard Peters <shadowrhyder@gmail.com>"]
license = "MIT"
edition = "2021"
description = "OpenTelemetry instrumentation for neo4rs Neo4j driver"
repository = "https://github.com/Executioner1939/otel-instrumentation-neo4jrs"
keywords = ["neo4j", "opentelemetry", "tracing", "database", "graph"]

[badges]
maintenance = { status = "experimental" }

[features]
default = []
metrics = ["opentelemetry/metrics"]
integration = []  # Feature flag for integration tests requiring Neo4j
full = ["metrics"]

[dependencies]
neo4rs = "0.8"
tracing = "0.1.41"
opentelemetry = { version = "0.30.0", features = ["trace"] }
opentelemetry-semantic-conventions = { version = "0.30.0", features = ["semconv_experimental"] }

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full", "test-util"] }
opentelemetry_sdk = { version = "0.30.0", features = ["metrics", "testing", "trace"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-opentelemetry = "0.31.0"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true